# LIRC

./: .gitattributes  .gitignore  DEAD.BRANCH  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  lirc.pc  lirc.pc.in  lirc_options.conf  pre-commit  pylint.conf  setup.sh
configs/: accent.conf  act200l.conf  act220l.conf  adaptec.conf  alsa_usb.conf  animax.conf  asusdh.conf  atilibusb.conf  atiusb.conf  atwf83.conf  audio.conf  audio_alsa.conf  avermedia.conf  avermedia98.conf  avermedia_vdomate.conf  awlibusb.conf  bestbuy.conf  bestbuy2.conf  breakoutbox.conf  bte.conf  bw6130.conf  caraca.conf  chronos.conf  com1.conf  com2.conf  com3.conf  com4.conf  commandir.conf  cph03x.conf  creative.conf  creative_infracd.conf  devinput.conf  dfclibusb.conf  dsp.conf  dvico.conf  ea65.conf  exaudio.conf  flyvideo.conf  ftdi.conf  gvbctv5pci.conf  (+71 more)
daemons/: Makefile.am  dictionary.c  dump_config.c  input_map.sh  irrecord.c  lircd.c  lircmd.c
doc/: .gitignore  Makefile.am  data2hwdb  data2table  hardware.yaml  release-html.sh  release-man.sh  table.sh
doc/html-source/: configuration-guide.html  head.html  install.html
doc/man-source/: lirc-config-tool.1  lirc-setup.inc  mode2.1  xmode2.1
git-tools/: fix-whitespace  version-clean  version-filter-setup  version-smudge
lib/: Makefile.am  ciniparser.c  dump_config.c  lirc_client.c  lirc_options.c  receive.c
plugins/: Makefile.am  hw_accent.c  hw_alsa_usb.c  hw_atilibusb.c  hw_atwf83.c  hw_audio.c  hw_audio_alsa.c  hw_awlibusb.c  hw_bte.c  hw_caraca.c  hw_commandir.c  hw_creative.c  hw_creative_infracd.c  hw_default.c  hw_devinput.c  hw_dfclibusb.c  hw_dsp.c  hw_ea65.c  hw_ftdi.c  hw_hiddev.c  hw_i2cuser.c  hw_iguanaIR.c  hw_irlink.c  hw_irman.c  hw_livedrive_common.c  hw_livedrive_midi.c  hw_livedrive_seq.c  hw_logitech.c  hw_mouseremote.c  hw_mp3anywhere.c  hw_mplay.c  hw_pcmak.c  hw_pinsys.c  hw_pixelview.c  hw_silitek.c  hw_slinke.c  hw_srm7500libusb.c  hw_tira.c  hw_udp.c  hw_uirt2.c  (+5 more)
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  boldquot.sed  en@boldquot.po  en@quot.po  lirc.pot  quot.sed  sv.po
remotes/sony/: lircd.conf.sonyir.RM-GP4U  lircd.conf.sonyir.RM-RM-U304  lircd.conf.sonyir.RM-Y1004  lircd.conf.sonyir.RM-YD025  lircd.conf.sonyir.RM-YD025.140404143847  lircd.conf.sonyir.RMT-B104A
systemd/: Makefile.am  lircd.service
tools/: .gitignore  Makefile.am  ircat.c  irexec.c  lirc-config-tool  lirc-install-configuration  lirc-lsplugins.c  lirc-lsremotes.c  lirc-setup  lirc_client.c  lircd-modprobe  mode2.c  xmode2.c
